# GEC

Cepheid_engine-betta/: main.cpp
Cepheid_engine-betta/DLC/: CMakeLists.txt  config_down_solar.json
Cepheid_engine-betta/DLC/GEC/: model_calclate.h
Cepheid_engine-betta/DLC/base/: base.cpp
Cepheid_engine-betta/DLC/kadastr/: kadastr.cpp
Cepheid_engine-betta/DLC/lib/glm/: CMakeLists.txt
Cepheid_engine-betta/DLC/utilite/: CeExploer.h  URL_curl.h
Cepheid_engine-betta/lib/CepheidEngine/include/: CeAxis.h  CeBoxElement.h  CeEnumeration.h  CeFPS.h  CeGraph.h  CeGraphics.h  CeInputText.h  CeObjectSVG.h  CePlane.h  CePlate.h  CePrimitiv.h  CeScrollbar.h  CeTextField.h  CeWorldMap.h  Controller_Res_2d_line.h  Controller_Win_storage.h  Data_ABC.h  Data_gl.h  Data_gl_array.h  Data_gl_one.h  Data_res.h  Data_res_one.h  Font_controller_BINDLESS.h  GLSL_code_data.h  Image_atlas.h  Merge_controller.h  Program_GPU.h  Section_static.h  Section_static_with_default_value.h  VAO.h  bezier_curves.h  buffer_mesh.h  ceobject.h  ceplugin_engine.h  controler_utilite.h  font.h  milieu.h  object_engine.h  position.h  rendering_engine.h  (+4 more)
Cepheid_engine-betta/lib/CepheidEngine/lib/CDT/CDT/include/: CDTUtils.h  CDTUtils.hpp
Cepheid_engine-betta/lib/CepheidEngine/lib/GL_layer/contrib/Tuple-utilities-template-library/: tuple_utl.h
Cepheid_engine-betta/lib/CepheidEngine/lib/GL_layer/contrib/glew/: glew.pc
Cepheid_engine-betta/lib/CepheidEngine/lib/GL_layer/include/: Atribute_texture.h  Buffer_id.h  Buffer_id_texture.h  Mesh_info.h  draw_program.h
Cepheid_engine-betta/lib/CepheidEngine/lib/GL_layer/src/: Mesh_info.cpp  Shader_program.cpp  interlayer_gl.cpp
Cepheid_engine-betta/lib/CepheidEngine/lib/Triangle/: CMakeLists.txt  main.c  triangle.c  triangle.h
Cepheid_engine-betta/lib/CepheidEngine/lib/WIN_layer/include/: Cursor_win.h  incoming_signals_from_user.h  window.h
Cepheid_engine-betta/lib/CepheidEngine/lib/WIN_layer/src/: Window.cpp
Cepheid_engine-betta/lib/CepheidEngine/shaders/: 2d_object_shader.frag  2d_object_shader.vert  line_shader.frag  line_shader_v2.geom  line_shader_v3.geom  text_shader.vert
Cepheid_engine-betta/lib/CepheidEngine/shaders_noBindless/: text_shader.vert
Cepheid_engine-betta/lib/CepheidEngine/shaders_noBindless_noGL_DRAW/: line_shader.vert  text_shader.frag
Cepheid_engine-betta/lib/CepheidEngine/src/: Image_atlas.cpp  Offline_packing.cpp  SVG.cpp  font.cpp  free_memory_controler.cpp  glifs.cpp
GEC/: CMakeLists.txt
GEC/DLC/GEC/: gecMain.cpp
GEC/DLC/kadastr/: Model_FEU.h
GEC/DLC/lib/OpenXLSX-master/: CMakeLists.txt
GEC/DLC/lib/curl-master/: CMakeLists.txt
GEC/DLC/utilite/: Exel_use.h  tuple_utl.h
GEC/lib/CepheidEngine/: .gitmodules  CMakeLists.txt
GEC/lib/CepheidEngine/include/: Buffer_mesh_controler.h  CeButtom.h  CeLine.h  CePlagin_menedger.h  CeText.h  Controller_Res_2d_form.h  Controller_Res_2d_text.h  Create_screenshot.h  Custom_object_list_template.h  Data_gl_array_no_ram_no_allocate.h  Data_gl_read_no_ram.h  Defolt_Program_GPU.h  Identification.h  Interator_different_steps.h  Mesh_data.h  Offline_packing.h  SVG.h  Section.h  Storage_data.h  Storage_resource.h  Stroke_of_fate.h  Texture_controller_BINDLESS.h  Unit_res.h  buffer_gl.h  celist.h  ceobject_fabric.h  color.h  context.h  free_memory_controler.h  glifs.h  image.h  load_file.h  mesh.h  signal_engine.h  them_center.h  type_resource.h
GEC/lib/CepheidEngine/lib/CDT/CDT/include/: Triangulation.hpp  predicates.h
GEC/lib/CepheidEngine/lib/CDT/CDT/src/: CDT.cpp
GEC/lib/CepheidEngine/lib/GL_layer/: CMakeLists.txt
GEC/lib/CepheidEngine/lib/GL_layer/contrib/glew/config/: version
GEC/lib/CepheidEngine/lib/GL_layer/include/: GL_type_to_cpp.h  Shader_program.h  interlayer_gl.h
GEC/lib/CepheidEngine/lib/GL_layer/src/: Buffer_id.cpp  Buffer_id_texture.cpp  Draw_program.cpp  GL_type_to_cpp.cpp
GEC/lib/CepheidEngine/lib/Tuple-utilities-template-library/: tuple_utl.h
GEC/lib/CepheidEngine/lib/WIN_layer/: CMakeLists.txt
GEC/lib/CepheidEngine/lib/WIN_layer/src/: Cursor_win.cpp
GEC/lib/CepheidEngine/shaders/: line_shader.vert  line_shader_v1.geom  text_shader.frag
GEC/lib/CepheidEngine/shaders_noBindless/: 2d_object_shader.frag  2d_object_shader.vert  line_shader.vert
GEC/lib/CepheidEngine/shaders_noBindless_noGL_DRAW/: line_shader.frag
GEC/lib/CepheidEngine/src/: Mesh_data.cpp  image.cpp  mesh.cpp
resource/: .xlsx  E0.xlsx  save_imput.json  template.xlsx  template_kadastr.xlsx
resource/DLC/: GEC-graf.json  GEC-input_calc_1.json  GEC-input_calc_1_inf.json  GEC-input_cct.json  GEC-input_dgy.json  GEC-input_ek.json  GEC-input_geu.json  GEC-input_gne.json  GEC-input_nte.json  GEC-input_setting.json  GEC-input_solar.json  GEC-input_veu.json  GEC-main.json  GEC-table.json  SOLAR-Any_a-Solar_menu.json  SOLAR-E-Solar_menu.json  SOLAR-Kadastr-Solar_menu.json  SOLAR-Optimal-A-Solar_menu.json  SOLAR-Solar_menu.json  SOLAR-Temperature-Solar_menu.json  config_down_solar.json  kadaster-energo_parametrs - копия.json
resource/DLC/pictures/: NASA.png~  backgraund.png~  button_ch.png~  closed.png~  dimension_CCT.png~  down.png~  jjj1-input.png~  jjj1.png~  querty_white.png~  scanmatik.png~  white.png~  white_button.png~
resource/DLC/pictures/frame/: DGY_fraem.png~  EK__frame.png~  FEU_frame.png~  GEU_frame.png~  GNE_frame.png~  NTE_frame.png~  PEE_frame.png~  PTE_frame.png~  SST_frame.png~  VEU_frame.png~
resource/pictures/: MC.png~  World.png~  marker.png~
resource/pictures/Концепты/: 2022-11-07_20-33-26.png~  RP5.RU.jpg~  МС-5.png~
